--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 .img {
-    
+    height: 100px;
+    width: 100px;
+    margin: 20px;
+    margin-top: 40px;
+    margin-left: 40px;
+}
+
+.showStats {
+    display: block;
+    box-sizing: border-box;
 }
